--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -5,6 +5,7 @@ xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
 http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 	<!-- TODO: Add <servlet> tags for each servlet here. -->
+	
 	<servlet>
     	<servlet-name>feedServlet</servlet-name>
     	<servlet-class>com.example.rssr.server.FeedServiceImpl</servlet-class>
@@ -14,6 +15,17 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
     	<servlet-name>feedServlet</servlet-name>
     	<url-pattern>/com_example_rssr/feedService</url-pattern>
   	</servlet-mapping>
+  	
+  	<servlet>
+    	<servlet-name>loginServlet</servlet-name>
+    	<servlet-class>com.example.rssr.server.LoginServiceImpl</servlet-class>
+  	</servlet>
+	<!-- TODO: Add <servlet-mapping> tags for each <servlet> here. -->
+	<servlet-mapping>
+    	<servlet-name>loginServlet</servlet-name>
+    	<url-pattern>/com_example_rssr/loginService</url-pattern>
+  	</servlet-mapping>
+  	
 	<!-- TODO: Optionally add a <welcome-file-list> tag to display a welcome file. -->
 	<welcome-file-list>
     	<welcome-file>Com.example.rssr.html</welcome-file>
